Fixthon : class added

--- a/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.css
+++ b/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.css
@@ -161,3 +161,9 @@ label.btn-import-label {
   color: white !important;
   opacity: 0.6;
 } 
+
+.link{
+  color : var(--color-secondary-blue);
+  cursor: pointer;
+  text-decoration: underline;
+}
