--- a/UI/src/app/config/upload/upload.component.html
+++ b/UI/src/app/config/upload/upload.component.html
@@ -182,7 +182,7 @@
                               <div class="p-d-flex p-justify-between p-align-center">
                                 <div class="p-d-flex p-align-center">
                                   <h3 class="color-grey">Added Users</h3>&nbsp;&nbsp;
-                                  <p> (*If the desired Domain name is not visible, kindly contact us on knowhowfeedback@publicissapient.com)</p>
+                                  <p> (*If the desired Domain name is not visible, kindly contact us on knowhowfeedback"&#64;"publicissapient.com)</p>
                                 </div>
                                 <p-button styleClass="p-button-secondary p-button-sm edit-button" (click)="onSprintCapacityEdit(item)"
                                   *ngIf="!projectCapacityEditMode" [disabled]="!item?.assigneeCapacity?.length > 0">
@@ -302,7 +302,7 @@
                           <div class="p-d-flex p-justify-between p-align-center">
                             <div class="p-d-flex p-align-center">
                               <h3 class="color-grey">Added Users</h3>&nbsp;&nbsp;
-                              <p> (*If the desired Domain name is not visible, kindly contact us on knowhowfeedback@publicissapient.com)</p>
+                              <p> (*If the desired Domain name is not visible, kindly contact us on knowhowfeedback"&#64;"publicissapient.com)</p>
                             </div>
                             <p-button styleClass="p-button-secondary p-button-sm edit-button" (click)="onSprintCapacityEdit(item)" *ngIf="!projectCapacityEditMode" [disabled]="!item?.assigneeCapacity?.length > 0">
                               <img alt="edit logo" src="../../../assets/img/edit.svg" style="width: 0.75rem"/>
