--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -15,7 +15,7 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<ng-container *ngIf="noProjects.hasOwnProperty(selectedtype.toLowerCase()) && !noProjects[selectedtype.toLowerCase()] else noProjectsTemplate">
+<ng-container *ngIf="selectedtype && noProjects.hasOwnProperty(selectedtype.toLowerCase()) && !noProjects[selectedtype.toLowerCase()] else noProjectsTemplate">
     <div *ngIf="!noKpis else noKpiTemplate">
         <ng-container *ngIf="!noFilterApplyData else noFilterApplyDataTemplate">
             <div id="message"></div>
