--- a/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.css
+++ b/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.css
@@ -161,3 +161,8 @@ label.btn-import-label {
   color: white !important;
   opacity: 0.6;
 } 
+
+:host ::ng-deep .ng-invalid > .p-chips > .p-inputtext, .p-inputtext.ng-invalid  {
+  border-color: #B00020;
+  border-width: initial;
+}
