--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.html
@@ -25,21 +25,22 @@
 
                 <div class="p-d-flex p-align-center">
                     <div><span *ngIf="field?.processorCommon"><i class="fas fa-sync-alt p-mr-2"></i></span>
-                        <label class="field-title">
+                        <label class="field-title" style="background-color: white;">
                             {{field['fieldLabel']}}
-                            <span class="font-black p-mr-1" *ngIf="field?.mandatory">*</span>
+                            <span class="p-mr-1" style="color: red;" *ngIf="field?.mandatory">*</span>
                             <span class="fa fa-info-circle" aria-hidden="true" pTooltip="<span>
-                                                            Definition:
-                                                            {{field.tooltip.definition}} <br>
-                                                            {{field.tooltip.kpiImpacted ? '<hr>KPI Impacted:' : '' }}
-                                                             {{field.tooltip.kpiImpacted ? field.tooltip.kpiImpacted : '' }}
-                                                            </span>" tooltipPosition="top" tooltipEvent="hover"
-                                tooltipStyleClass="tooltiptext" [escape]="false"></span>
+                                                                                                Definition:
+                                                                                                {{field.tooltip.definition}} <br>
+                                                                                                {{field.tooltip.kpiImpacted ? '<hr>KPI Impacted:' : '' }}
+                                                                                                 {{field.tooltip.kpiImpacted ? field.tooltip.kpiImpacted : '' }}
+                                                                                                </span>" tooltipPosition="top"
+                                tooltipEvent="hover" tooltipStyleClass="tooltiptext" [escape]="false"></span>
+                            <span>
+                                <img #commentSummary class="p-p-2 h-40 cursor-pointer" style="transform: translateY(9px)"
+                                    (click)="hitoryPopup.toggle($event);handleBtnClick(field.fieldName);"
+                                    src="../../../assets/img/RequiresSyncIcon.svg" alt="History" />
+                            </span>
                         </label>
-                    </div>
-                        <div id="comment-summary" class="btn-custom rounded filter-btn pt-3">
-                            <img #commentSummary class="p-p-2 h-40 cursor-pointer" (click)="hitoryPopup.toggle($event);handleBtnClick(field.fieldName);"
-                                src="../../../assets/img/RequiresSyncIcon.svg" alt="History" />
                     </div>
                 </div>
                     <ng-container *ngIf="!field?.nestedFields else nestedFieldContainer">
