--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -15,9 +15,10 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<ng-container *ngIf="selectedtype && noProjects.hasOwnProperty(selectedtype.toLowerCase()) && !noProjects[selectedtype.toLowerCase()] else noProjectsTemplate">
-    <div *ngIf="!noKpis else noKpiTemplate">
-        <ng-container *ngIf="!noFilterApplyData else noFilterApplyDataTemplate">
+<ng-container
+    *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
+    <div *ngIf="!noKpis; else noKpiTemplate">
+        <ng-container *ngIf="!noFilterApplyData; else noFilterApplyDataTemplate">
             <div id="message"></div>
             <div class="{{selectedtype}}" id="{{selectedtype}}">
                 <div class="clearfix" *ngIf="showChart !== 'table'">
@@ -380,8 +381,8 @@
         <h2 class="msg" *ngIf="selectedTab === 'iteration' || selectedTab ==='release'">The selected project need to
             have atleast one {{ selectedTab }} available for the KPI's to show
             up</h2>
-        <h2 class="msg" *ngIf="selectedTab !== 'iteration' && selectedTab !=='release'">The selected project need to
-            have atleast one project available for the KPI's to show
+        <h2 class="msg" *ngIf="selectedTab !== 'iteration' && selectedTab !=='release'">There should be atleast one
+            project available for the KPI's to show
             up</h2>
     </div>
 </ng-template>
