--- a/UI/src/app/features/dashboardv2/header-v2/header.component.html
+++ b/UI/src/app/features/dashboardv2/header-v2/header.component.html
@@ -1,12 +1,43 @@
 <lib-ps-header [pSLogoInfo]="pSLogoInfo" [platformLogoInfo]="platformLogoInfo" 
 [showHeaderComments]="true" [showHeaderUserDetails]="true" [showHeaderNotifications]="true">
-<!-- <div class="p-d-flex p-align-center p-jc-between"> -->
   <div comments >
     <app-recent-comments></app-recent-comments>
   </div>
+  <div notifications>
+    <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button"
+    (click)="notification.toggle($event)">
+    <img src="../../../assets/img/ico-notifications.svg" alt="Notification" />
+    <span *ngIf="notificationCount > 0" class="count noti-count">{{notificationCount}}</span>
+  </div>
+  <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
+  </div>
   <div userDetails>
-  
+  <lib-ps-user-profile-details [items]="userMenuItems" [userName]="userDetails['user_name']" [userBadgeName]="'SA'"></lib-ps-user-profile-details>
+  </div>
+</lib-ps-header>
+<!-- <header class="">
+  <nav class="p-d-flex p-align-center p-jc-between">
+
+    <div class="logo p-pt-1 p-pb-1 p-d-flex">
+      <div class="position-relative p-mr-2 die-container" *ngIf="auth_service && isSpeedSuite">
+        <img src="assets/img/Switchplatforms.svg" class="icon-dice" (click)="appItems.toggle($event)" alt="Switch" width="50"/>
+        <div class="down-arrow cursor-pointer" (click)="appItems.toggle($event)"></div>
+        <p-menu [model]="appList" [popup]="true" #appItems class="app-switch"></p-menu>
+     </div>
+      <img src="assets/img/PSKnowHowLogo.svg" alt="Logo"/>
+    </div>
+
     <div class="p-d-flex p-align-center p-p-1">
+
+      <app-recent-comments></app-recent-comments>
+
+      <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button"
+        (click)="notification.toggle($event)">
+        <img src="../../../assets/img/ico-notifications.svg" alt="Notification" />
+        <span *ngIf="notificationCount > 0" class="count noti-count">{{notificationCount}}</span>
+      </div>
+      <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
+
       <div class="back-btn-wraper" *ngIf="userDetails['authorities']?.includes('ROLE_PROJECT_ADMIN') || userDetails['authorities']?.includes('ROLE_SUPERADMIN') || userDetails['authorities']?.includes('ROLE_PROJECT_VIEWER')">
         <div *ngIf="router.url.split('/').includes('Config') || router.url.split('/').includes('Help')"
           class="back-btn-container rounded p-mr-3">
@@ -15,7 +46,7 @@
             (click)="navigateToDashboard()" ></button>
         </div>
       </div>
-    
+
       <div class="p-d-flex p-align-center p-jc-between" role="button" (click)="usermenu.toggle($event)">
         <i class="far fa-user custom-user p-ml-2 p-mr-2"></i>
         <div class="cursor-pointer">
@@ -32,20 +63,8 @@
           </div>
         </ng-template>
       </p-menu>
-        
-        
     </div>
-  
-  </div>
-  <div notifications>
-    <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button"
-    (click)="notification.toggle($event)">
-    <img src="../../../assets/img/ico-notifications.svg" alt="Notification" />
-    <span *ngIf="notificationCount > 0" class="count noti-count">{{notificationCount}}</span>
-  </div>
-  <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
-  </div>
-<!-- </div> -->
-</lib-ps-header>
+  </nav>
+</header> -->
 
 
