--- a/UI/src/app/config/project-config/basic-config/basic-config.component.html
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.html
@@ -101,7 +101,7 @@
                     <p-autoComplete id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId"
                       [style]="{'width':'500px'}" [suggestions]="field.filteredSuggestions"
                       (completeMethod)="search($event, field)" required="required" [dropdown]="true" field="name"
-                      [forceSelection]="ifSuperUser === true?false:true">
+                      [forceSelection]="isSpeedSuite === true ? false : true">
                       <ng-template let-country pTemplate="item">
                         <div class="country-item">
                           <div>{{country.name}}</div>
