Fixthon : Modified bar+line chart to support  x-axis with numeric or non-numeric values.

--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -131,7 +131,8 @@
                                                                     <ng-container *ngIf="checkIfDataPresent(kpi)">
                                                                         <app-grouped-column-plus-line-chart-v2
                                                                             [data]="kpiChartData[kpi?.kpiId]"
-                                                                            [lineChart]="true"
+                                                                            [lineChart]="kpi?.kpiDetail?.lineChart"
+                                                                            [isXaxisGroup]="kpi?.kpiDetail?.isXaxisGroup"
                                                                             [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                             [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
                                                                             [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
