--- a/UI/src/app/component/grouped-column-plus-line-chart-v2/grouped-column-plus-line-chart-v2.component.css
+++ b/UI/src/app/component/grouped-column-plus-line-chart-v2/grouped-column-plus-line-chart-v2.component.css
@@ -46,7 +46,8 @@
     color: #F5F9FF;
     border-radius: 5px;
     /* box-shadow: 0px 0px 6px #b9b9bb; */
-    z-index: 900;
+    z-index: 1200;
+    pointer-events: none;
 }
 
 ::ng-deep div.tooltip p {
