--- a/UI/src/app/dashboard/nav/nav.component.html
+++ b/UI/src/app/dashboard/nav/nav.component.html
@@ -16,7 +16,7 @@
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
-<div class="h-100">
+<div class="nav-container">
   <div class="navigation2 rows" *ngIf="!visibleSidebar">
     <div class="selected-wraper">
       <div class="selected-board">
