--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -46,12 +46,13 @@
 <ng-container *featureFlag="'NEW_UI_SWITCH'">
   <div class="ui-switch-container"
     *ngIf="router.url.indexOf('authentication') === -1 && router.url.indexOf('config') === -1">
-    <span class="p-mr-6"> New experience (ON) | Legacy view (OFF)</span>
-    <p-inputSwitch [(ngModel)]="newUI" (onChange)="uiSwitch($event, true)"></p-inputSwitch>
+    <p class="p-my-0 p-py-0"><span class="p-mr-6"> New experience (ON) | Legacy view (OFF)</span>
+    <p-inputSwitch [(ngModel)]="newUI" (onChange)="uiSwitch($event, true)"></p-inputSwitch></p>
+    <p *ngIf="!newUI" class="p-my-0 p-py-0">
+      <span class="red">NOTICE : </span><span>Legacy (old) UI is deprecated in release 11.0 and it will retire in next release!</span>
+    </p>
   </div>
-  <p *ngIf="!newUI" class="moving-text">
-    <span class="red">IMPORTANT NOTICE : </span><span>Legacy (old) UI is deprecated in release 11.0 and it will retire in next release!!</span>
-  </p>
+  
 </ng-container>
 <router-outlet></router-outlet>
 <ng-container *ngIf="loadingRouteConfig">
