--- a/UI/src/app/dashboard/dashboard.component.css
+++ b/UI/src/app/dashboard/dashboard.component.css
@@ -65,6 +65,7 @@
   height: 100%;
   margin-left: -250px; 
   box-shadow: 0px 3px 6px #00000029; 
+  background-color: rgba(67, 116, 149, 1);
 }
 
 #wrapper.toggled #sidebar-wrapper {
