added table to display data

--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -216,7 +216,24 @@
         </ng-template>
       </p-table>
     </section>
-
+    <section *ngIf="findTraceLogForTool('Jira')?.additionalInfo?.length > 0">
+      <h3>Additional Info:</h3>
+      <p-table [value]="findTraceLogForTool('Jira')?.additionalInfo" [tableStyle]="{ 'min-width': '40rem' }"
+        [scrollable]="true" scrollHeight="200px">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Sprint Name </th>
+            <th>Issue tagged</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-item>
+          <tr>
+            <td>{{item.key}}</td>
+            <td>{{item.value}}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </section>
     <ul class="p-pr-1 p-pl-0 list-style-none" *ngIf="dataMismatchObj['Jira']">
       <li class="tooltip-item p-d-flex p-pt-2">
         <div class="icon-container">
