--- a/UI/src/app/dashboard/iteration/iteration.component.html
+++ b/UI/src/app/dashboard/iteration/iteration.component.html
@@ -16,6 +16,7 @@
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
+<kpi-card-v3></kpi-card-v3>
 <div *ngIf="!noKpis else noKpiTemplate">
   <div id="message"></div>
   <ng-container *ngIf="!noProjects else noProjectsTemplate">
