--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -217,7 +217,8 @@
       </p-table>
     </section>
     <section *ngIf="findTraceLogForTool('Jira')?.additionalInfo?.length > 0">
-      <h3>Additional Info:</h3>
+      <h3>  <img height="25px" style="display: block; margin-top: -3px; margin-left: 2px;" alt="warning"
+        src="../../../assets/img/Warning.svg" /> Incorrect Sprint Tagging (Please correct the sprint tagging for the issues listed below.)</h3>
       <p-table [value]="findTraceLogForTool('Jira')?.additionalInfo" [tableStyle]="{ 'min-width': '40rem' }"
         [scrollable]="true" scrollHeight="200px">
         <ng-template pTemplate="header">
