--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -29,7 +29,7 @@
             placeholder="Select"  optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
             [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv"
-            [filter]="true" [hidden]="selectedTab === 'iteration'">
+            [filter]="true" [hidden]="isFilterHidden(filters)" >
             <ng-template pTemplate="selectedItem" *ngIf="selectedFilters?.length">
                 <div class="filter-item-selected">
                     <span>{{ selectedFilters[0].nodeName  }}</span>
