--- a/processors/jira/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
+++ b/processors/jira/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
@@ -41,7 +41,7 @@
                                 <summary>Please check the issues below and rectify the sprint tagging to ensure accurate
                                     reporting.
                                 </summary>
-                                <p><em th:text="${Notification_Error}"> </em></p>
+                                <p><em th:utext="${Notification_Error}"> </em></p>
                             </details>
                         </div>
                         <div><p>Please ignore if tagging is appropriate.</p></div>
