DTS-41251: email msg change Change-log: using html attribute for table creation for outlier details email

--- a/kafka-consumers/notification-consumer/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
+++ b/kafka-consumers/notification-consumer/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td>
                         <div>The last Jira processor run that started at <em th:text="${Notification_Msg}"> </em>
-                            has detected sprint outlier.
+                            has detected unrelated sprints.
                         </div>
 
                         <div>
