--- a/processors/jira/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
+++ b/processors/jira/src/main/resources/templates/Outlier_In_Jira_Processor_Template.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td>
                         <div>The last Jira processor run that started at <em th:text="${Notification_Msg}"> </em>
-                            has detected sprint outlier.
+                            has detected unrelated sprints.
                         </div>
 
                         <div>
