DTS-40992 : azure snapshot toggle added on processor page

--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -128,6 +128,11 @@
                       Reached the API rate limit. Repo scanning will automatically resume after {{getSCMToolTimeDetails(processor.toolName)}}
                     </p-overlayPanel>
                   </div>
+                  <div class="p-ml-2" *ngIf="processor.toolName === 'Azure'">
+                    <p-inputSwitch tooltipPosition="top"
+                    [pTooltip]="azureSnapshotToggleTooltip" name="azureRefreshActiveSprintReport" id="azureRefreshActiveSprintReport" [(ngModel)]="processor.azureRefreshActiveSprintReport" (onChange)="azureRefreshActiveSprintReportToggleChange(processor)">
+                  </p-inputSwitch>
+                  </div>
                 </div>
               </td>
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
