--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -69,7 +69,7 @@
     <div class="p-mr-2"
       *ngIf="this.selectedSprint?.['sprintState']?.toLowerCase() === 'active' && selectedTab?.toLowerCase() === 'iteration'">
       <span class="refresh-state p-p-2" (click)="displayModal = true"
-        *ngIf=" (lastSyncData | json) == '{}' || lastSyncData.errorInFetch">
+        *ngIf=" ((lastSyncData | json) == '{}' || lastSyncData.errorInFetch) && isAzureProect === false ">
         <img src="../../../assets/img/icon-refresh.svg" class="p-mr-1" alt="Refresh" />Refresh
       </span>
       <span class="refresh-state p-p-2"
